--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ body {
     color: #240046;
 }
 
-.rodape {
+.footer {
     text-align: center;
     background-color: #fec601;
     color: #240046;
