about.css removed, code improved, can still be better

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -6,3 +6,13 @@
 ul, li, ol, a {
     text-decoration: none;
 }
+
+:root {
+    --primary-color: #000000;
+    --secondary-color: #ffc300;
+    --tertiary-color: #22d4fd;
+    --hover-color: #272727;
+
+    --main-font: 'Montserrat', sans-serif;
+    --second-font: 'Krona One', sans-serif;
+}
